assets/css/main.css
html {
  font-size: 61.5%;
}

body {
  font-size: 1.6rem;
  font-family: 'Helvetica Neue', 'Arial', sans-serif;
  color: #111;
  margin: 0 auto;
  line-height: 1.6;
}

a {
  color: #111;
}

.link-nowrap-nodec {
  text-decoration: none;
  white-space: nowrap;
}

.link-nowrap-nodec:hover {
  text-decoration: underline;
}

.link-fave-heart {
  text-decoration: none;
  color: red;
}

.link-fave-heart:hover {
  color: darkred;
}

.content {
  max-width: 64rem;
  margin: auto;
  padding: 2rem;
}

.content h1,
.content h2,
.content h3,
.content h4,
.content h5,
.content h6 {
  margin: 0.9em 0;
  line-height: 1.15;
}

.content p {
  margin: 0.9em 0;
}

.content h1 + p,
.content h2 + p,
.content h3 + p,
.content h4 + p,
.content h5 + p,
.content h6 + p {
  margin-top: 0.9em;
}

.content hr {
  border-top: 1px solid #000;
  border-bottom: 0;
  background-color: #000;
  color: #000;
}

.content code,
.content pre {
  font-family: 'monaco', monospace;
}

.content code {
  font-size: 0.96em;
  padding: 0 0.3em;
}

.content pre {
  display: block;
  overflow-x: auto;
  font-size: 1.5rem;
  white-space: pre;
  margin: 1.5em 0;
  padding: 1.5em 2.5em;
  line-height: 1.5;
}

.content pre code {
  padding: 0;
}

.content img {
  max-width: 100%;
  height: auto;
}

.content figure {
  margin: 1.6rem 0;
}

.content figure img {
  display: block;
  max-width: 100%;
  margin: 0 auto;
}

.content figure figcaption {
  font-size: 0.92em;
  font-style: italic;
  line-height: 2.2rem;
  text-align: center;
  margin-top: 0.6rem;
  padding: 0 1rem;
}

.post-list {
  display: grid;
  gap: 0.5rem;
}

.post-list > .post-list-info {
  overflow: hidden;
  text-overflow: ellipsis;
}

.post-list > .post-list-date {
  white-space: pre;
}

.post-list > .post-list-rec {
  padding-left: 0.3em;
}

.content > div#writing {
  grid-template-columns: 2fr 0.2fr 0.1fr;
}

.content > div#reading {
  grid-template-columns: 1.1fr 0.9fr 0.2fr 0.1fr;
}

.post-header > .post-title {
  margin: 0.1em 0;
  font-size: 2.9rem;
  line-height: 1.15;
}

.post-header > .post-meta {
  font-size: 0.95em;
  color: #767676;
}

.navbar {
  position: sticky;
  top: 0;
  background-color: #fff;
  z-index: 998;
}

.navbar-content {
  display: grid;
  gap: 0.3em;
  grid-template-columns: 0.3fr 1.5fr 0.4fr 0.1fr;
  max-width: 64rem;
  margin: auto;
  z-index: 999;
  padding: 2.1rem 2rem 1.6rem 2rem;
}

.navbar-content > .navbar-internal-links {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  list-style: none;
  text-transform: capitalize;
  margin: 0;
  padding: 0;
}

.navbar-content > .navbar-external-links {
  display: flex;
  height: 1.4em;
}

.navbar-external-links > .navbar-external-link {
  padding: 0.2rem 0 0 0.6rem;
}

.navbar-external-links > .navbar-external-link:first-of-type {
  padding: 0.2rem 0 0 0;
}

.navbar-external-links > .navbar-external-link svg {
  fill: #949494;
  stroke: #949494;
}

.navbar-external-links > .navbar-external-link svg:hover {
  fill: #333;
  stroke: #333;
}

.navbar-separator {
  border-top: 1px solid #000;
  border-bottom: 0;
  color: #000;
  background-color: #000;
  margin: 0;
}

/* support for Edge */
@supports (-ms-ime-align: auto) {
  .navbar-content > .navbar-internal-links {
    justify-content: space-around;
    margin: 0 1.4rem 0 1.4rem;
  }
}

/* adjustment when very small */
@media screen and (max-width: 50rem) {
  .post-list > .post-list-info a {
    white-space: normal;
    text-decoration: underline;
  }

  .post-list > .post-list-rec {
    padding-left: 0;
    padding-bottom: 2rem;
    text-decoration: none;
  }

  .content div#writing,
  .content div#reading {
    gap: 0;
    grid-template-columns: 1fr;
  }

  .navbar {
    position: static;
  }

  .navbar-content {
    display: block;
  }

  .navbar-content > .navbar-internal-links {
    display: block;
    margin: 0.25em 0 0.75em 0;
    text-decoration: underline;
  }

  .navbar-content > .navbar-external-links {
    padding: 0.4em 0;
  }
}

